--- a/htdocs/assets/scss/core/_modules.scss
+++ b/htdocs/assets/scss/core/_modules.scss
@@ -236,7 +236,10 @@ img.media__img {
 }
 
 .header {
-	margin-bottom: 2.5em;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 5;
 	background-color: $color-brand-dark;
 	@include respond-max($bp1) {
 		margin-bottom: 1.5em;
@@ -262,7 +265,7 @@ img.media__img {
 				color: white;
 				line-height: 2.5;
 				width: 10em;
-				padding: .5em 1.25em;
+				padding: .5em 1.5em;
 				width: 10em;
 				@include transition(all, .2s);
 				&:hover {
@@ -377,6 +380,12 @@ img.media__img {
 	}
 }
 
+.header-section__title--username {
+	@include respond-max($bp1) {
+		display: none;
+	}
+}
+
 .header-section--left {
 	float: left;
 }
@@ -397,9 +406,12 @@ img.media__img {
 	display: inline-block;
 	background-color: #eeeeee;
 	margin-right: .5em;
+	@include respond-max($bp1) {
+		margin-right: 0;
+	}
 }
 
-.header-section__title--username {
+.header-section__home {
 	&:after {
 		@extend %icon-after;
 		content: '\e802';
